--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "name": "iasc-valtio-yjs-minimal-example",
   "builds": [
+    { "src": "package.json", "use": "vercel-sapper"},
     { "src": "app.js", "use": "@vercel/node" }
   ],
   "routes": [
