--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "valtio-yjs-array-demo",
+  "name": "automerge-repo-demo-message-board",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@automerge/automerge": "^2.1.0",
+    "@automerge/automerge-repo": "^1.0.16",
+    "@automerge/automerge-repo-network-messagechannel": "^1.0.16",
+    "@automerge/automerge-repo-network-websocket": "^1.0.16",
+    "@automerge/automerge-repo-react-hooks": "^1.0.16",
+    "@automerge/automerge-repo-storage-indexeddb": "^1.0.16",
     "nanoid": "3.1.23",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "5.0.1",
-    "valtio": "1.1.0",
-    "valtio-yjs": "0.1.0",
-    "y-websocket": "1.3.16",
-    "yjs": "13.5.11"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "@craco/craco": "^7.1.0",
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test --env=jsdom"
   },
   "browserslist": [
     ">0.2%",
